Fix extra margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,9 @@ h4 {
     display: inline-block;
 }
 
+.list-inline-item:not(:last-child) {
+    margin-right: 0;
+}
 
 .row-table {
     display: table;
